--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,6 @@
 <div>
+  <p>Replace localhost with:</p>
+  <input type="text" style="width: 150px" />
   <img src="images/ring.gif" width="150" />
 </div>
 
