Hide replace tips if no local ip

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
-<div>
-  <p>Replace localhost with:</p>
+<div id="setting" style="display: none">
+  <p>Replace <span id="local">127.0.0.1</span> with:</p>
   <input type="text" style="width: 150px" />
-  <img src="images/ring.gif" width="150" />
 </div>
+<img src="images/ring.gif" width="150" />
 
 <script src="js/popup.js"></script>
