--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,17 @@
-<div id="setting" style="display: none">
-  <p>Replace <span id="local">127.0.0.1</span> with:</p>
-  <input type="text" style="width: 150px" />
-</div>
-<img src="images/ring.gif" width="150" />
+<html>
 
-<script src="js/popup.js"></script>
+<head>
+  <link href="https://fonts.302.at/css?family=Exo" rel="stylesheet">
+</head>
+
+<body style="text-align: center; font-family: 'Exo', cursive;">
+  <div id="setting" style="display: none;">
+    <p style="margin: 5px 0;">Replace <span id="local" style="color: #F44336;">127.0.0.1</span> with:</p>
+    <input type="text" style="width: 130px;border: 1px solid #2196F3;border-radius: 2px;" />
+  </div>
+  <img src="images/ring.gif" width="150" />
+
+  <script src="js/popup.js"></script>
+</body>
+
+</html>
